# backend/app/Models/AttemptAnswer.php
@@ -1,0 +1,38 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class AttemptAnswer extends Model
+{
+    use HasFactory;
+
+    protected $fillable = [
+        'quiz_attempt_id',
+        'question_id',
+        'selected_option_id',
+        'answer_boolean',
+        'answer_text',
+    ];
+
+    protected $casts = [
+        'answer_boolean' => 'boolean',
+    ];
+
+    public function attempt()
+    {
+        return $this->belongsTo(QuizAttempt::class, 'quiz_attempt_id');
+    }
+
+    public function question()
+    {
+        return $this->belongsTo(Question::class);
+    }
+
+    public function selectedOption()
+    {
+        return $this->belongsTo(QuestionOption::class, 'selected_option_id');
+    }
+}
