# backend/app/Models/QuizAttempt.php
@@ -35,4 +35,9 @@ class QuizAttempt extends Model
     {
         return $this->belongsTo(User::class);
     }
+
+    public function answers()
+    {
+        return $this->hasMany(AttemptAnswer::class);
+    }
 }
